manifests/apps/testapp/app-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-nginx
  labels:
    app: testapp-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testapp-nginx
  template:
    metadata:
      labels:
        app: testapp-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: testapp-nginx-svc
  labels:
    app: testapp-nginx
spec:
  type: ClusterIP
  selector:
    app: testapp-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-nginx-ingress
  labels:
    app: testapp-nginx
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: testapp.buergerhoff.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp-nginx-svc
                port:
                  number: 80
